Fix left alignment of logo

--- a/app/assets/stylesheets/responsive/_settings.scss
+++ b/app/assets/stylesheets/responsive/_settings.scss
@@ -6,7 +6,7 @@ $base-font-size: 16px;
 // Specify the filename and dimensions of your logo file here
 $logo-filename: 'logo.png';
 $logo-highdpi-filename: 'logo@2.png'; //Should be at least 2x the size, in the same proportions
-$logo-width: 165px;
+$logo-width: 161px;
 $logo-height: 28px;
 
 $color_sand: #f3f1eb;
